[package]
name = "rcore-fs-sfs"
version = "0.1.0"
authors = ["WangRunji <wangrunji0408@163.com>"]
edition = "2018"

[dependencies]
rcore-fs = { path = "../rcore-fs" }
static_assertions = "0.3"
spin = "0.9"
log = "0.4"
bitvec = { version = "0.17", default-features = false, features = ["alloc"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0.7"
